Add destructive reset option to user menu

--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -6,6 +6,8 @@
   "actions.toggleLanguage": "Cambiar idioma",
   "actions.profile": "Perfil",
   "actions.logout": "Cerrar sesión",
+  "actions.resetData": "Eliminar todos los datos",
+  "actions.resetDataConfirm": "¿Seguro que deseas eliminar todos los datos registrados en este dispositivo? Esta acción no se puede deshacer.",
   "actions.openUserMenu": "Abrir menú de usuario",
   "actions.openUserMenuWithName": "Abrir menú de usuario de {name}",
   "actions.openUserPanel": "Abrir panel de usuario",
@@ -118,6 +120,7 @@
   "auth.feedback.passwordChanged": "Contraseña actualizada correctamente.",
   "auth.feedback.invalidCurrentPassword": "La contraseña actual es incorrecta.",
   "auth.feedback.userDeleted": "Cuenta eliminada. Será redirigido.",
+  "auth.feedback.dataReset": "Todos los datos fueron eliminados. Redirigiendo a la pantalla de inicio de sesión.",
   "theme.light": "Claro",
   "theme.dark": "Oscuro",
   "theme.system": "Automático",
