--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -6,6 +6,8 @@
   "actions.toggleLanguage": "Alternar idioma",
   "actions.profile": "Perfil",
   "actions.logout": "Sair",
+  "actions.resetData": "Excluir todos os dados",
+  "actions.resetDataConfirm": "Tem certeza de que deseja excluir todos os dados registrados neste dispositivo? Esta ação não pode ser desfeita.",
   "actions.openUserMenu": "Abrir menu do usuário",
   "actions.openUserMenuWithName": "Abrir menu do usuário de {name}",
   "actions.openUserPanel": "Abrir painel do usuário",
@@ -122,6 +124,7 @@
   "auth.feedback.passwordChanged": "Senha atualizada com sucesso.",
   "auth.feedback.invalidCurrentPassword": "A senha atual está incorreta.",
   "auth.feedback.userDeleted": "Conta removida. Você será redirecionado.",
+  "auth.feedback.dataReset": "Dados removidos com sucesso. Redirecionando para a tela de login.",
   "theme.light": "Claro",
   "theme.dark": "Escuro",
   "theme.system": "Automático",
