Implement dependent management and ownership transfer for profile

--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -65,12 +65,23 @@
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Panel del usuario",
   "auth.profile.panelMessage": "Administra tu cuenta sin salir del panel principal.",
+  "auth.profile.overviewKicker": "Cuenta principal",
+  "auth.profile.overviewDescription": "Mantén tus datos actualizados para garantizar un acceso rápido y seguro.",
   "auth.profile.logout": "Cerrar sesión",
   "auth.profile.delete": "Eliminar cuenta",
   "auth.profile.deleteConfirm": "¿Desea eliminar la cuenta de {name}? Esta acción no se puede deshacer.",
+  "auth.profile.detailsTitle": "Detalles de la cuenta",
+  "auth.profile.detailsDescription": "Edita la información compartida con todo el equipo.",
+  "auth.profile.securityTitle": "Seguridad",
+  "auth.profile.securityDescription": "Actualiza la contraseña con frecuencia para mantener la cuenta protegida.",
+  "auth.profile.quickActionsTitle": "Acciones rápidas",
+  "auth.profile.quickActionsDescription": "Cierra la sesión o elimina este acceso del dispositivo.",
+  "auth.profile.stats.totalUsers": "Usuarios en la cuenta",
+  "auth.profile.stats.dependents": "Usuarios dependientes",
+  "auth.profile.stats.ownerSince": "Propietario desde",
   "auth.profile.userManagementTitle": "Gestión de usuarios",
   "auth.profile.userAdd": "Agregar usuario",
-  "auth.profile.userManagementDescription": "Revise y administre todas las cuentas guardadas en este dispositivo.",
+  "auth.profile.userManagementDescription": "Invita dependientes, actualiza datos compartidos y transfiere la propiedad cuando sea necesario.",
   "auth.profile.userPanelLoginRequired": "Inicie sesión para acceder a su panel.",
   "auth.profile.userPanelOwnerOnly": "Solo los propietarios pueden administrar usuarios.",
   "auth.profile.userTable.name": "Nombre",
@@ -84,6 +95,10 @@
   "auth.profile.userDelete": "Eliminar",
   "auth.profile.userDeleteConfirm": "¿Desea eliminar al usuario {name}? Esta acción no se puede deshacer.",
   "auth.profile.userDeleted": "Usuario eliminado correctamente.",
+  "auth.profile.userTransfer": "Transferir propiedad",
+  "auth.profile.transferConfirm": "¿Desea transferir la propiedad a {name}? Perderá el acceso de propietario de inmediato.",
+  "auth.profile.transferSuccess": "Propiedad transferida a {name}.",
+  "auth.profile.ownerDeleteBlocked": "Transfiera la propiedad antes de remover este usuario.",
   "auth.profile.userForm.title.create": "Agregar usuario",
   "auth.profile.userForm.title.edit": "Editar usuario",
   "auth.profile.userForm.title.duplicate": "Duplicar usuario",
@@ -120,6 +135,9 @@
   "auth.feedback.passwordChanged": "Contraseña actualizada correctamente.",
   "auth.feedback.invalidCurrentPassword": "La contraseña actual es incorrecta.",
   "auth.feedback.userDeleted": "Cuenta eliminada. Será redirigido.",
+  "auth.feedback.ownerExists": "Esta cuenta ya tiene un propietario. Transfiera la propiedad antes de asignar uno nuevo.",
+  "auth.feedback.ownerRequired": "La cuenta necesita un propietario activo.",
+  "auth.feedback.ownerDeleteSelf": "Transfiera la propiedad antes de eliminar su propia cuenta.",
   "auth.feedback.dataReset": "Todos los datos fueron eliminados. Redirigiendo a la pantalla de inicio de sesión.",
   "theme.light": "Claro",
   "theme.dark": "Oscuro",
