--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -69,12 +69,23 @@
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Painel do usuário",
   "auth.profile.panelMessage": "Gerencie sua conta sem sair do painel principal.",
+  "auth.profile.overviewKicker": "Perfil principal",
+  "auth.profile.overviewDescription": "Mantenha os dados atualizados para garantir acesso rápido e seguro.",
   "auth.profile.logout": "Encerrar sessão",
   "auth.profile.delete": "Excluir conta",
   "auth.profile.deleteConfirm": "Tem certeza de que deseja excluir a conta de {name}? Esta ação não pode ser desfeita.",
+  "auth.profile.detailsTitle": "Dados da conta",
+  "auth.profile.detailsDescription": "Edite as informações compartilhadas com toda a equipe.",
+  "auth.profile.securityTitle": "Segurança",
+  "auth.profile.securityDescription": "Atualize a senha periodicamente e mantenha a conta protegida.",
+  "auth.profile.quickActionsTitle": "Ações rápidas",
+  "auth.profile.quickActionsDescription": "Finalize a sessão atual ou remova este acesso do dispositivo.",
+  "auth.profile.stats.totalUsers": "Usuários na conta",
+  "auth.profile.stats.dependents": "Usuários dependentes",
+  "auth.profile.stats.ownerSince": "Proprietário desde",
   "auth.profile.userManagementTitle": "Gestão de usuários",
   "auth.profile.userAdd": "Adicionar usuário",
-  "auth.profile.userManagementDescription": "Visualize e administre todas as contas cadastradas neste dispositivo.",
+  "auth.profile.userManagementDescription": "Convide dependentes para a conta, atualize dados compartilhados e transfira a propriedade quando necessário.",
   "auth.profile.userPanelLoginRequired": "Faça login para acessar seu painel.",
   "auth.profile.userPanelOwnerOnly": "Somente proprietários podem gerenciar usuários.",
   "auth.profile.userTable.name": "Nome",
@@ -88,6 +99,10 @@
   "auth.profile.userDelete": "Excluir",
   "auth.profile.userDeleteConfirm": "Deseja remover o usuário {name}? Essa ação não pode ser desfeita.",
   "auth.profile.userDeleted": "Usuário removido com sucesso.",
+  "auth.profile.userTransfer": "Transferir propriedade",
+  "auth.profile.transferConfirm": "Deseja transferir a propriedade para {name}? Você perderá o acesso de proprietário imediatamente.",
+  "auth.profile.transferSuccess": "Propriedade transferida para {name}.",
+  "auth.profile.ownerDeleteBlocked": "Transfira a propriedade antes de remover este usuário.",
   "auth.profile.userForm.title.create": "Adicionar usuário",
   "auth.profile.userForm.title.edit": "Editar usuário",
   "auth.profile.userForm.title.duplicate": "Duplicar usuário",
@@ -124,6 +139,9 @@
   "auth.feedback.passwordChanged": "Senha atualizada com sucesso.",
   "auth.feedback.invalidCurrentPassword": "A senha atual está incorreta.",
   "auth.feedback.userDeleted": "Conta removida. Você será redirecionado.",
+  "auth.feedback.ownerExists": "Já existe um proprietário para esta conta. Transfira a propriedade antes de definir outro.",
+  "auth.feedback.ownerRequired": "É necessário manter um proprietário ativo na conta.",
+  "auth.feedback.ownerDeleteSelf": "Transfira a propriedade antes de excluir a própria conta.",
   "auth.feedback.dataReset": "Dados removidos com sucesso. Redirecionando para a tela de login.",
   "theme.light": "Claro",
   "theme.dark": "Escuro",
