--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -65,12 +65,23 @@
   "auth.profile.title": "Profile",
   "auth.profile.panelTitle": "User panel",
   "auth.profile.panelMessage": "Manage your account without leaving the main dashboard.",
+  "auth.profile.overviewKicker": "Primary account",
+  "auth.profile.overviewDescription": "Keep your information up to date for fast and secure access.",
   "auth.profile.logout": "Log out",
   "auth.profile.delete": "Delete account",
   "auth.profile.deleteConfirm": "Are you sure you want to delete {name}'s account? This action cannot be undone.",
+  "auth.profile.detailsTitle": "Account details",
+  "auth.profile.detailsDescription": "Edit the information shared with your whole team.",
+  "auth.profile.securityTitle": "Security",
+  "auth.profile.securityDescription": "Update your password regularly to keep this account protected.",
+  "auth.profile.quickActionsTitle": "Quick actions",
+  "auth.profile.quickActionsDescription": "Sign out or remove this access from the device.",
+  "auth.profile.stats.totalUsers": "Users in this account",
+  "auth.profile.stats.dependents": "Dependent users",
+  "auth.profile.stats.ownerSince": "Owner since",
   "auth.profile.userManagementTitle": "User management",
   "auth.profile.userAdd": "Add user",
-  "auth.profile.userManagementDescription": "Review and manage every account stored on this device.",
+  "auth.profile.userManagementDescription": "Invite dependents, update shared data, and transfer ownership when needed.",
   "auth.profile.userPanelLoginRequired": "Sign in to access your panel.",
   "auth.profile.userPanelOwnerOnly": "Only owners can manage users.",
   "auth.profile.userTable.name": "Name",
@@ -84,6 +95,10 @@
   "auth.profile.userDelete": "Delete",
   "auth.profile.userDeleteConfirm": "Do you want to remove {name}'s user? This action cannot be undone.",
   "auth.profile.userDeleted": "User removed successfully.",
+  "auth.profile.userTransfer": "Transfer ownership",
+  "auth.profile.transferConfirm": "Do you want to transfer ownership to {name}? You will immediately lose owner access.",
+  "auth.profile.transferSuccess": "Ownership transferred to {name}.",
+  "auth.profile.ownerDeleteBlocked": "Transfer ownership before removing this user.",
   "auth.profile.userForm.title.create": "Add user",
   "auth.profile.userForm.title.edit": "Edit user",
   "auth.profile.userForm.title.duplicate": "Duplicate user",
@@ -120,6 +135,9 @@
   "auth.feedback.passwordChanged": "Password updated successfully.",
   "auth.feedback.invalidCurrentPassword": "Current password is incorrect.",
   "auth.feedback.userDeleted": "Account removed. You'll be redirected.",
+  "auth.feedback.ownerExists": "This account already has an owner. Transfer ownership before assigning a new one.",
+  "auth.feedback.ownerRequired": "An active owner is required for the account.",
+  "auth.feedback.ownerDeleteSelf": "Transfer ownership before deleting your own account.",
   "auth.feedback.dataReset": "All data has been removed. Redirecting to the sign-in screen.",
   "theme.light": "Light",
   "theme.dark": "Dark",
