Streamline owner registration requirements

--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -62,6 +62,9 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instrucciones de restablecimiento a {email}.",
   "auth.register.title": "Crear cuenta",
   "auth.register.submit": "Registrar",
+  "auth.register.terms.prefix": "He leído y acepto los",
+  "auth.register.terms.link": "términos legales",
+  "auth.register.terms.suffix": "disponibles en el sitio de 5Horas.",
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Panel del usuario",
   "auth.profile.panelMessage": "Administra tu cuenta sin salir del panel principal.",
@@ -120,6 +123,7 @@
   "auth.form.role": "Rol de acceso",
   "auth.form.owner": "Propietario",
   "auth.form.member": "Miembro",
+  "auth.form.phone": "Celular",
   "auth.form.currentPassword": "Contraseña actual",
   "auth.form.newPassword": "Nueva contraseña",
   "auth.form.confirmPassword": "Confirmar nueva contraseña",
