--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -66,6 +66,9 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instruções de redefinição para {email}.",
   "auth.register.title": "Criar conta",
   "auth.register.submit": "Registrar",
+  "auth.register.terms.prefix": "Li e aceito os",
+  "auth.register.terms.link": "termos legais",
+  "auth.register.terms.suffix": "disponíveis no site da 5Horas.",
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Painel do usuário",
   "auth.profile.panelMessage": "Gerencie sua conta sem sair do painel principal.",
@@ -124,6 +127,7 @@
   "auth.form.role": "Perfil de acesso",
   "auth.form.owner": "Proprietário",
   "auth.form.member": "Membro",
+  "auth.form.phone": "Celular",
   "auth.form.currentPassword": "Senha atual",
   "auth.form.newPassword": "Nova senha",
   "auth.form.confirmPassword": "Confirmar nova senha",
