--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -62,6 +62,9 @@
   "auth.login.recoveryMessageWithEmail": "We'll send reset instructions to {email}.",
   "auth.register.title": "Create account",
   "auth.register.submit": "Register",
+  "auth.register.terms.prefix": "I have read and accept the",
+  "auth.register.terms.link": "legal terms",
+  "auth.register.terms.suffix": "available on the 5Horas website.",
   "auth.profile.title": "Profile",
   "auth.profile.panelTitle": "User panel",
   "auth.profile.panelMessage": "Manage your account without leaving the main dashboard.",
@@ -120,6 +123,7 @@
   "auth.form.role": "Access role",
   "auth.form.owner": "Owner",
   "auth.form.member": "Member",
+  "auth.form.phone": "Mobile phone",
   "auth.form.currentPassword": "Current password",
   "auth.form.newPassword": "New password",
   "auth.form.confirmPassword": "Confirm new password",
