Enhance registration full name handling

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -117,6 +117,8 @@
   "auth.profile.form.profileLegend": "Personal information",
   "auth.profile.form.passwordLegend": "Security",
   "auth.profile.form.updatePassword": "Update password",
+  "auth.form.fullName": "Full name",
+  "auth.form.fullName.placeholder": "e.g., Ana Maria Silva",
   "auth.form.name": "Name",
   "auth.form.email": "Email",
   "auth.form.password": "Password",
@@ -132,6 +134,7 @@
   "auth.feedback.invalid": "Invalid credentials. Try again.",
   "auth.feedback.exists": "Email already registered.",
   "auth.feedback.required": "Please fill in all required fields.",
+  "auth.feedback.fullNameRequired": "Enter first and last name.",
   "auth.feedback.profileUpdated": "Profile updated successfully.",
   "auth.feedback.userNotFound": "User not found.",
   "auth.feedback.generic": "Something went wrong. Please try again.",
