--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -117,6 +117,8 @@
   "auth.profile.form.profileLegend": "Información personal",
   "auth.profile.form.passwordLegend": "Seguridad",
   "auth.profile.form.updatePassword": "Actualizar contraseña",
+  "auth.form.fullName": "Nombre completo",
+  "auth.form.fullName.placeholder": "Ej.: Ana María Silva",
   "auth.form.name": "Nombre",
   "auth.form.email": "Correo electrónico",
   "auth.form.password": "Contraseña",
@@ -132,6 +134,7 @@
   "auth.feedback.invalid": "Credenciales inválidas. Intenta de nuevo.",
   "auth.feedback.exists": "Correo ya registrado.",
   "auth.feedback.required": "Complete todos los campos obligatorios.",
+  "auth.feedback.fullNameRequired": "Ingresa nombre y apellido.",
   "auth.feedback.profileUpdated": "Perfil actualizado correctamente.",
   "auth.feedback.userNotFound": "Usuario no encontrado.",
   "auth.feedback.generic": "Ocurrió un error. Inténtelo nuevamente.",
