--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -121,6 +121,8 @@
   "auth.profile.form.profileLegend": "Dados pessoais",
   "auth.profile.form.passwordLegend": "Segurança",
   "auth.profile.form.updatePassword": "Atualizar senha",
+  "auth.form.fullName": "Nome completo",
+  "auth.form.fullName.placeholder": "Ex.: Ana Maria Silva",
   "auth.form.name": "Nome",
   "auth.form.email": "E-mail",
   "auth.form.password": "Senha",
@@ -136,6 +138,7 @@
   "auth.feedback.invalid": "Credenciais inválidas. Tente novamente.",
   "auth.feedback.exists": "E-mail já cadastrado.",
   "auth.feedback.required": "Preencha todos os campos obrigatórios.",
+  "auth.feedback.fullNameRequired": "Informe nome e sobrenome.",
   "auth.feedback.profileUpdated": "Perfil atualizado com sucesso.",
   "auth.feedback.userNotFound": "Usuário não encontrado.",
   "auth.feedback.generic": "Ocorreu um erro. Tente novamente.",
