Enhance registration phone handling

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -126,6 +126,9 @@
   "auth.form.owner": "Owner",
   "auth.form.member": "Member",
   "auth.form.phone": "Mobile phone",
+  "auth.form.phone.region.br": "Brazil (+55)",
+  "auth.form.phone.region.intl": "International number",
+  "auth.form.phone.hint": "Choose Brazil (+55) to auto-format or include the country code for international numbers.",
   "auth.form.currentPassword": "Current password",
   "auth.form.newPassword": "New password",
   "auth.form.confirmPassword": "Confirm new password",
@@ -135,6 +138,8 @@
   "auth.feedback.exists": "Email already registered.",
   "auth.feedback.required": "Please fill in all required fields.",
   "auth.feedback.fullNameRequired": "Enter first and last name.",
+  "auth.feedback.invalidBrazilianPhone": "Enter a valid Brazilian mobile number with area code and ninth digit.",
+  "auth.feedback.invalidInternationalPhone": "Include the country code with the + prefix for international numbers.",
   "auth.feedback.profileUpdated": "Profile updated successfully.",
   "auth.feedback.userNotFound": "User not found.",
   "auth.feedback.generic": "Something went wrong. Please try again.",
