--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -126,6 +126,9 @@
   "auth.form.owner": "Propietario",
   "auth.form.member": "Miembro",
   "auth.form.phone": "Celular",
+  "auth.form.phone.region.br": "Brasil (+55)",
+  "auth.form.phone.region.intl": "Número internacional",
+  "auth.form.phone.hint": "Selecciona Brasil (+55) para formatear automáticamente o incluye el código del país para números internacionales.",
   "auth.form.currentPassword": "Contraseña actual",
   "auth.form.newPassword": "Nueva contraseña",
   "auth.form.confirmPassword": "Confirmar nueva contraseña",
@@ -135,6 +138,8 @@
   "auth.feedback.exists": "Correo ya registrado.",
   "auth.feedback.required": "Complete todos los campos obligatorios.",
   "auth.feedback.fullNameRequired": "Ingresa nombre y apellido.",
+  "auth.feedback.invalidBrazilianPhone": "Ingresa un celular brasileño válido con código de área y noveno dígito.",
+  "auth.feedback.invalidInternationalPhone": "Incluye el código de país con el prefijo + para números internacionales.",
   "auth.feedback.profileUpdated": "Perfil actualizado correctamente.",
   "auth.feedback.userNotFound": "Usuario no encontrado.",
   "auth.feedback.generic": "Ocurrió un error. Inténtelo nuevamente.",
