--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -130,6 +130,9 @@
   "auth.form.owner": "Proprietário",
   "auth.form.member": "Membro",
   "auth.form.phone": "Celular",
+  "auth.form.phone.region.br": "Brasil (+55)",
+  "auth.form.phone.region.intl": "Número internacional",
+  "auth.form.phone.hint": "Selecione Brasil (+55) para formatar automaticamente ou informe o código do país para números internacionais.",
   "auth.form.currentPassword": "Senha atual",
   "auth.form.newPassword": "Nova senha",
   "auth.form.confirmPassword": "Confirmar nova senha",
@@ -139,6 +142,8 @@
   "auth.feedback.exists": "E-mail já cadastrado.",
   "auth.feedback.required": "Preencha todos os campos obrigatórios.",
   "auth.feedback.fullNameRequired": "Informe nome e sobrenome.",
+  "auth.feedback.invalidBrazilianPhone": "Informe um celular brasileiro válido com DDD e nono dígito.",
+  "auth.feedback.invalidInternationalPhone": "Inclua o código do país com o prefixo + para números internacionais.",
   "auth.feedback.profileUpdated": "Perfil atualizado com sucesso.",
   "auth.feedback.userNotFound": "Usuário não encontrado.",
   "auth.feedback.generic": "Ocorreu um erro. Tente novamente.",
