Add password strength meter to registration

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -122,6 +122,10 @@
   "auth.form.name": "Name",
   "auth.form.email": "Email",
   "auth.form.password": "Password",
+  "auth.passwordStrength.label": "Password strength",
+  "auth.passwordStrength.level.weak": "Weak",
+  "auth.passwordStrength.level.medium": "Medium",
+  "auth.passwordStrength.level.strong": "Strong",
   "auth.form.role": "Access role",
   "auth.form.owner": "Owner",
   "auth.form.member": "Member",
@@ -142,6 +146,7 @@
   "auth.feedback.invalidBrazilianPhone": "Enter a valid Brazilian mobile number with area code and ninth digit.",
   "auth.feedback.invalidInternationalPhone": "Include the country code with the + prefix for international numbers.",
   "auth.feedback.profileUpdated": "Profile updated successfully.",
+  "auth.feedback.passwordWeak": "Choose a stronger password to continue.",
   "auth.feedback.userNotFound": "User not found.",
   "auth.feedback.generic": "Something went wrong. Please try again.",
   "auth.feedback.passwordMismatch": "Passwords do not match.",
