--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -122,6 +122,10 @@
   "auth.form.name": "Nombre",
   "auth.form.email": "Correo electrónico",
   "auth.form.password": "Contraseña",
+  "auth.passwordStrength.label": "Fuerza de la contraseña",
+  "auth.passwordStrength.level.weak": "Débil",
+  "auth.passwordStrength.level.medium": "Media",
+  "auth.passwordStrength.level.strong": "Fuerte",
   "auth.form.role": "Rol de acceso",
   "auth.form.owner": "Propietario",
   "auth.form.member": "Miembro",
@@ -142,6 +146,7 @@
   "auth.feedback.invalidBrazilianPhone": "Ingresa un celular brasileño válido con código de área y noveno dígito.",
   "auth.feedback.invalidInternationalPhone": "Incluye el código de país con el prefijo + para números internacionales.",
   "auth.feedback.profileUpdated": "Perfil actualizado correctamente.",
+  "auth.feedback.passwordWeak": "Usa una contraseña más segura para continuar.",
   "auth.feedback.userNotFound": "Usuario no encontrado.",
   "auth.feedback.generic": "Ocurrió un error. Inténtelo nuevamente.",
   "auth.feedback.passwordMismatch": "Las contraseñas no coinciden.",
