--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -126,6 +126,10 @@
   "auth.form.name": "Nome",
   "auth.form.email": "E-mail",
   "auth.form.password": "Senha",
+  "auth.passwordStrength.label": "Força da senha",
+  "auth.passwordStrength.level.weak": "Fraca",
+  "auth.passwordStrength.level.medium": "Média",
+  "auth.passwordStrength.level.strong": "Forte",
   "auth.form.role": "Perfil de acesso",
   "auth.form.owner": "Proprietário",
   "auth.form.member": "Membro",
@@ -146,6 +150,7 @@
   "auth.feedback.invalidBrazilianPhone": "Informe um celular brasileiro válido com DDD e nono dígito.",
   "auth.feedback.invalidInternationalPhone": "Inclua o código do país com o prefixo + para números internacionais.",
   "auth.feedback.profileUpdated": "Perfil atualizado com sucesso.",
+  "auth.feedback.passwordWeak": "Use uma senha mais forte para continuar.",
   "auth.feedback.userNotFound": "Usuário não encontrado.",
   "auth.feedback.generic": "Ocorreu um erro. Tente novamente.",
   "auth.feedback.passwordMismatch": "As senhas informadas não coincidem.",
