Add reusable password toggle for auth forms

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -65,6 +65,8 @@
   "auth.register.terms.prefix": "I have read and accept the",
   "auth.register.terms.link": "legal terms",
   "auth.register.terms.suffix": "available on the 5Horas website.",
+  "auth.register.showPassword": "Show password",
+  "auth.register.hidePassword": "Hide password",
   "auth.profile.title": "Profile",
   "auth.profile.panelTitle": "User panel",
   "auth.profile.panelMessage": "Manage your account without leaving the main dashboard.",
