--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -65,6 +65,8 @@
   "auth.register.terms.prefix": "He leído y acepto los",
   "auth.register.terms.link": "términos legales",
   "auth.register.terms.suffix": "disponibles en el sitio de 5Horas.",
+  "auth.register.showPassword": "Mostrar contraseña",
+  "auth.register.hidePassword": "Ocultar contraseña",
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Panel del usuario",
   "auth.profile.panelMessage": "Administra tu cuenta sin salir del panel principal.",
