--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -69,6 +69,8 @@
   "auth.register.terms.prefix": "Li e aceito os",
   "auth.register.terms.link": "termos legais",
   "auth.register.terms.suffix": "disponíveis no site da 5Horas.",
+  "auth.register.showPassword": "Mostrar senha",
+  "auth.register.hidePassword": "Ocultar senha",
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Painel do usuário",
   "auth.profile.panelMessage": "Gerencie sua conta sem sair do painel principal.",
