--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -71,6 +71,8 @@
   "auth.register.terms.suffix": "disponíveis no site da 5Horas.",
   "auth.register.showPassword": "Mostrar senha",
   "auth.register.hidePassword": "Ocultar senha",
+  "auth.register.panelTitle": "Registro inicial",
+  "auth.register.panelMessage": "Complete os dados para criar a primeira conta proprietária.",
   "auth.profile.title": "Perfil",
   "auth.profile.panelTitle": "Painel do usuário",
   "auth.profile.panelMessage": "Gerencie sua conta sem sair do painel principal.",
