Add miniapp scaffold generator and market integration

--- a/appbase/templates/miniapp-structure/i18n/en-US.json
+++ b/appbase/templates/miniapp-structure/i18n/en-US.json
@@ -1,16 +1,1 @@
-{
-  "miniapp": {
-    "title": "MiniApp Scaffold"
-  },
-  "home": {
-    "title": "Home",
-    "description": "This MiniApp showcases the default scaffolded structure."
-  },
-  "settings": {
-    "title": "Settings",
-    "description": "Use this section to wire specific preferences and options for the MiniApp."
-  },
-  "actions": {
-    "openSettings": "Open Settings"
-  }
-}
+{ "home.title": "Home" }
